@@ -29,6 +29,8 @@ PHP                                                                        NEWS
 - Fixed bug #49528 (UTF-16 strings prefixed by BOMs wrongly converted).
   (Moriyoshi)
 - Fixed bug #48805 (IPv6 socket transport is not working). (Ilia)
+- Fixed bug #48764 (PDO_pgsql::query always uses implicit prepared statements
+  if v3 proto available). (Matteo, Mark Kirkwood)
 
 
 17 Sep 2009, PHP 5.2.11
